Create First section after restoring branch

--- a/index.html
+++ b/index.html
@@ -22,10 +22,11 @@
 <div class="second">
 <div class="intro">
     <div class="hero"><h1>This Website is awesome</h1></div>
-    <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</p>
+    <div class="bick"><p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</p>
     <button>Sign up</button>
+    </div>
 </div>
-<img  width="1000px" height="500px" src="imgs/neom-UUPsAkA6jQA-unsplash.jpg"   alt="Foot stepped on muddy water">
+<img  width="1200px" height="500px" src="imgs/neom-UUPsAkA6jQA-unsplash.jpg"   alt="Foot stepped on muddy water">
 </div>
 </div>
 <div class="random">
