Improve second panel header subtext illustration

--- a/index.html
+++ b/index.html
@@ -23,20 +23,21 @@
 <div class="intro">
     <div class="hero"><h1>This Website is awesome</h1></div>
     <div class="bick"><p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</p>
-    <button>Sign up</button>
+    <button >Sign up</button>
     </div>
 </div>
 <img  width="1200px" height="500px" src="imgs/neom-UUPsAkA6jQA-unsplash.jpg"   alt="Foot stepped on muddy water">
 </div>
 </div>
 <div class="random">
-    <h1>Some random information</h1>
+    <h1 class="whip">Some random information</h1>
     <ul class="link">
-        <li><img src=""><p>this is some subtext under an illustration</p></li>
-        <li><img src=""><p>this is some subtext under an illustration</p></li>
-        <li><img src=""><p>this is some subtext under an illustration</p></li>
-        <li><img src=""><p>this is some subtext under an illustration</p></li>
+        <li><img src="" class="smallimgs"><p>this is some subtext under an illustration</p></li>
+        <li><img src="" class="smallimgs"><p>this is some subtext under an illustration</p></li>
+        <li><img src="" class="smallimgs"><p>this is some subtext under an illustration</p></li>
+        <li><img src="" class="smallimgs"><p>this is some subtext under an illustration</p></li>
     </ul>
+    </div>
 <div class="third">
     <p>This is an inspiring ,or a testimonial from a customer. 
         Maybe it's just filling up space,or maybe people will actually 
@@ -49,7 +50,6 @@
 </div>
 <div class="finale">
     <p>Copyright &copy; The Odin Project 2021</p>
-</div>
 </div>
 </body>
 </html>
