--- a/index.html
+++ b/index.html
@@ -32,10 +32,10 @@
 <div class="random">
     <h1 class="whip">Some random information</h1>
     <ul class="link">
-        <li><img src="" class="smallimgs"><p>this is some subtext under an illustration</p></li>
-        <li><img src="" class="smallimgs"><p>this is some subtext under an illustration</p></li>
-        <li><img src="" class="smallimgs"><p>this is some subtext under an illustration</p></li>
-        <li><img src="" class="smallimgs"><p>this is some subtext under an illustration</p></li>
+        <li><img src="" class="smallimgs"><p>this is some subtext under an illustration or image</p></li>
+        <li><img src="" class="smallimgs"><p>this is some subtext under an illustration or image</p></li>
+        <li><img src="" class="smallimgs"><p>this is some subtext under an illustration or image</p></li>
+        <li><img src="" class="smallimgs"><p>this is some subtext under an illustration or image</p></li>
     </ul>
     </div>
 <div class="third">
