--- a/index.html
+++ b/index.html
@@ -42,10 +42,10 @@
     <p class="quote">This is an inspiring quote,or a testimonial from a customer. 
         Maybe it's just filling up space,or maybe people will actually 
         read it. Who knows? All I know is that it looks nice.</p>
-    <h2 class="god">-Thor,God of Thunder</h2>
+    <h2 class="god">-Thor, God of Thunder</h2>
 </div>
 <div class="fourth">
-    <div class="smol"><p>Call to action! It's time!</p><p>Sign up for our product by clicking that button right over there!</p>
+    <div class="smol"><div class="action"><p class="Call">Call to action! It's time!</p><p>Sign up for our product by clicking that button right over there!</p></div>
     <button>Sign up</button>
 </div>
 </div>
