finish the final panel

--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
     <h2 class="god">-Thor, God of Thunder</h2>
 </div>
 <div class="fourth">
-    <div class="smol"><div class="action"><p class="Call">Call to action! It's time!</p><p>Sign up for our product by clicking that button right over there!</p></div>
-    <button>Sign up</button>
+    <div class="smol"><div class="action"><p class="leg">Call to action! It's time!</p><p>Sign up for our product by clicking that button right over there!</p></div>
+    <button class="sinkin">Sign up</button>
 </div>
 </div>
 <div class="finale">
